# howtofixcvedotcom

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  bazel-bin  bazel-howtofixcvedotcom  bazel-out  bazel-testlogs  build.sh  deps.bzl
.github/workflows/: action.yaml  backend.yaml  frontend.yaml
backend/: BUILD.bazel  Dockerfile  Makefile  env-example  go.mod  main.go
backend/configs/: BUILD.bazel  configs.go
backend/controllers/: BUILD.bazel  controller.go
backend/utils/: BUILD.bazel  utils.go
frontend/: BUILD.bazel  Dockerfile  Makefile  app.js  package-lock.json  package.json
frontend/public/: index.html
