load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "backend",
    srcs = ["main.go"],
    importpath = "github.com/nicolasjulian/howtofixcvedotcom/backend",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/controllers",
        "@com_github_labstack_echo_v4//:echo",
    ],
)

go_binary(
    name = "backend_howtofixcvedotcom",
    srcs = ["main.go"],
    importpath = "github.com/nicolasjulian/howtofixcvedotcom/backend",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/controllers",
        "@com_github_labstack_echo_v4//:echo",
    ],
)
